--- a/mysql-install.yaml
+++ b/mysql-install.yaml
@@ -5,7 +5,7 @@
     mysql_root_password: ExpenseApp@1
     login_host: mysql.kamineni.site
   tasks:
-  - name: ansible to install pymysql
+  - name: ansible to install pymysql         #Dependency package
     ansible.builtin.pip:
       name:
       - PyMySQL
@@ -32,3 +32,7 @@
   - name: print mysql info
     ansible.builtin.debug:
       msg: "{{ mysql_info }}"
+  
+  - name: setup MySQL root password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+    when: mysql_info.failed is true
