--- a/mysql-install.yaml
+++ b/mysql-install.yaml
@@ -6,10 +6,10 @@
     login_host: mysql.kamineni.site
   tasks:
   - name: ansible to install pymysql         #Dependency package
-    ansible.builtin.pip:
-      name:
-      - PyMySQL
-      executable: pip3.9
+    # ansible.builtin.pip:
+    #   name:
+    #   - PyMySQL
+    #   executable: pip3.9
   - name: install MySQL Server
     ansible.builtin.package:
       name: mysql-server
@@ -21,18 +21,18 @@
       state: started
       enabled: yes
 
-  - name: connect mysql server
-    community.mysql.mysql_info:
-      login_user: root
-      login_password: "{{ mysql_root_password }}"
-      login_host: "{{ login_host }}"
-    ignore_errors: true
-    register: mysql_info
+  # - name: connect mysql server
+  #   community.mysql.mysql_info:
+  #     login_user: root
+  #     login_password: "{{ mysql_root_password }}"
+  #     login_host: "{{ login_host }}"
+  #   ignore_errors: true
+  #   register: mysql_info
 
-  - name: print mysql info
-    ansible.builtin.debug:
-      msg: "{{ mysql_info }}"
+  # - name: print mysql info
+  #   ansible.builtin.debug:
+  #     msg: "{{ mysql_info }}"
   
-  - name: setup MySQL root password
-    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
-    when: mysql_info.failed is true
+  # - name: setup MySQL root password
+  #   ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+  #   when: mysql_info.failed is true
